Name:			alm
Version:		0.1
Stability:		alpha
Synopsis:		Machine learning library
Category:		Algorithms, AI, Clustering
License:		BSD3
Author:			Badi' Abdul-Wahid
Maintainer:		abdulwahidc@gmail.com
Build-Type:		Simple
Data-dir:       src
Cabal-Version:	>= 1.2

Library
    exposed-modules: 
                     ML.ART.ART
                     ML.ART.Instances
                     ML.ART.Types
                     ML.ARTMap.ARTMap
                     ML.ARTMap.Types
                     ML.Internal.Types
                     ML.Types
    build-depends:   base, containers
