Name:			alm
Version:		0.1
Stability:		alpha
Synopsis:		Machine learning library
Category:		Algorithms, AI, Clustering
License:		BSD3
Author:			Badi' Abdul-Wahid
Maintainer:		abdulwahidc@gmail.com
Build-Type:		Simple
Cabal-Version:	>= 1.2

Library
    exposed-modules: 
                     ML.ART.ART
                     ML.ART.Instances
                     ML.ART.Types
                     ML.ARTMap.ARTMap
                     ML.ARTMap.Types
                     ML.Internal.Types
                     ML.Internal.Types.Vector
                     ML.Internal.Instances
                     ML.Stats
                     ML.Types
    build-depends:   base, containers, hstats
